Changelog
=========

4.0 - unreleased
------------------

- Implement the getDataOrigin method for the FlareContentListingObject that
  plone.app.contentlisting defines and that plone.app.search expects to exist.
  [timo]

- Use tika for extracting binary content.
  [tom_gross]

- Plone 4.3 compatibility of search view
  [tom_gross]

- Introduce ICheckIndexable-adapter for checking if an object is indexable.
  [tom_gross]

- Use proper i18n labels.
  [tom_gross]

- Drop dependency on elementree (in favour of lxml).
  [tom_gross]


3.1 - 2013-02-16
----------------

- Add datehandler support for python date objects.
  [jcbrand]

- Add optional plone.app.contentlisting/plone.app.search support
  [do3cc][csenger]

- Add datehandler support for python date objects.
  [jcbrand]

- Add inthandler support for not indexing Integers that are None.
  [do3cc]


3.0 - 2012-02-06
----------------

- Ignore a batch start parameter when selecting a facet to filter on.
  https://github.com/Jarn/collective.solr/issues/12
  [mj]


3.0b5 - 2011-12-07
------------------

- Removed `solr_dump_catalog` and `solr_import_dump` command line scripts.
  They were too dependent on internals and had subtle bugs.
  [hannosch]

- Sort arguments in `buildQuery` to get a stable ordering for test output.
  [hannosch]

- Solr facet queries on unknown fields will now raise a SolrException.
  [hannosch]

- Update example configuration to Solr 3.5.
  [hannosch]

- Fix control panel adapter to save the search_pattern as utf-8.
  [ggozad]


3.0b4 - 2011-11-10
------------------

- Revert `unrestrictedSearchResults` change, as it breaks additional catalogs,
  like the membrane catalogs.
  [hannosch]


3.0b3 - 2011-11-09
------------------

- Made maintenance sync view compatible with latest internals of field indexes.
  [hannosch]

- Also dispatch `unrestrictedSearchResults` to the Solr server.
  https://github.com/Jarn/collective.solr/issues/5
  [reinhardt, hannosch]
